--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -570,7 +570,8 @@ object {
 
 .the-page-title {
   background-color: #fff;
-  height: 40px; }
+  height: 45px;
+  padding: 0 30px; }
   .the-page-title ul {
     display: -ms-flexbox;
     display: flex;
@@ -581,6 +582,8 @@ object {
     position: relative; }
     .the-page-title ul li {
       display: inline-block; }
+      .the-page-title ul li a {
+        color: #404040; }
   @media (min-width: 768px) {
     .the-page-title {
       display: none; } }
@@ -949,10 +952,7 @@ div .transparent-menu {
   width: 100%;
   height: auto;
   margin: 0 auto; }
-
   @media (min-width: 768px) {
-
-
     .site-main .home {
       padding: 0 90px; } }
   .site-main .home .home-wrapper {
@@ -967,9 +967,7 @@ div .transparent-menu {
         position: relative; } }
     .site-main .home .home-wrapper .home-img {
       height: auto; }
-
       @media (min-width: 768px) {
-
         .site-main .home .home-wrapper .home-img {
           background-color: rgba(0, 0, 0, 0.74);
           width: 1264px;
@@ -1144,18 +1142,14 @@ div .transparent-menu {
           box-sizing: border-box;
           width: 100%;
           padding: 45px 0px; } }
-
     @media (min-width: 768px) {
-
       .site-main .support-wrapper .information .support-img-wrapper {
         height: 0; } }
     .site-main .support-wrapper .information .support-img-wrapper img {
       margin: 0 6rem;
       width: 287px;
       height: 470px; }
-
       @media (min-width: 768px) {
-
         .site-main .support-wrapper .information .support-img-wrapper img {
           height: auto;
           display: -ms-flexbox;
@@ -1164,9 +1158,7 @@ div .transparent-menu {
           right: 0px; } }
     .site-main .support-wrapper .information .support-img-wrapper p {
       text-align: center; }
-
       @media (min-width: 768px) {
-
         .site-main .support-wrapper .information .support-img-wrapper p {
           display: -ms-flexbox;
           display: flex;
@@ -1211,7 +1203,6 @@ div .transparent-menu {
         line-height: 42px;
         color: #000; }
     .site-main .support-wrapper .information .btn {
-
       display: -ms-flexbox;
       display: flex;
       -ms-flex-pack: distribute;
@@ -1265,7 +1256,6 @@ div .transparent-menu {
       display: -ms-flexbox;
       display: flex; }
       @media (min-width: 768px) {
-
         .site-main .support-wrapper .information .green-btn {
           color: #fff;
           margin-left: 80px;
@@ -1323,9 +1313,7 @@ div .transparent-menu {
       -ms-flex-wrap: wrap;
           flex-wrap: wrap;
       position: relative; }
-
       @media (min-width: 768px) {
-
         .site-main .all-features .features-wrapper .features-flipper {
           display: -ms-flexbox;
           display: flex;
@@ -1355,9 +1343,7 @@ div .transparent-menu {
         color: #000000;
         -webkit-backface-visibility: hidden;
         backface-visibility: hidden; }
-
         @media (min-width: 768px) {
-
           .site-main .all-features .features-wrapper .features-flipper .front {
             display: -ms-flexbox;
             display: flex; } }
@@ -1373,9 +1359,7 @@ div .transparent-menu {
         bottom: 1px;
         background-color: #fff;
         transform: rotateY(180deg); }
-
         @media (min-width: 768px) {
-
           .site-main .all-features .features-wrapper .features-flipper .features-back {
             display: -ms-flexbox;
             display: flex; } }
@@ -1706,11 +1690,13 @@ body {
       -ms-flex-wrap: wrap;
           flex-wrap: wrap; } }
   .materials img {
-    width: 300px;
-    height: 300px; }
+    width: 400px;
+    height: 400px; }
     @media (min-width: 768px) {
       .materials img {
-        margin-top: 50px; } }
+        margin-top: 50px;
+        width: 300px;
+        height: 300px; } }
 
 .materials-contents {
   width: 90%; }
@@ -1767,8 +1753,8 @@ body {
       -ms-flex-direction: row;
           flex-direction: row; } }
   .first-benefits-section img {
-    width: 250px;
-    height: 250px;
+    width: 400px;
+    height: 400px;
     margin-top: 30px; }
     @media (min-width: 768px) {
       .first-benefits-section img {
@@ -1851,7 +1837,8 @@ body {
 .montessori-archive {
   border-top: solid 3px #4FC8A1;
   padding-top: 12px;
-  width: 90%; }
+  margin-top: 40px;
+  width: 65%; }
   @media (min-width: 768px) {
     .montessori-archive h3 {
       width: 600px; } }
@@ -1868,7 +1855,7 @@ body {
   padding-left: 10px;
   cursor: pointer; }
 
-/*Start Resources Section  */
+/******** Start Resources Section ********/
 .main-resources {
   border-bottom: none;
   height: 400px;
@@ -1900,369 +1887,6 @@ body {
         font-size: 1.1rem; } }
 
 /*--------------------------------------------------------------
-# About Page
---------------------------------------------------------------*/
-* {
-  box-sizing: border-box; }
-
-.about-wrapper {
-  margin: 0 auto;
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-  max-width: 768px;
-  background-color: grey; }
-
-.about-school {
-  border-bottom: solid 3px #4FC8A1;
-  padding-bottom: 4.875rem; }
-
-.members-list {
-  padding: 2px;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-direction: column;
-      flex-direction: column; }
-  @media (min-width: 768px) {
-    .members-list {
-      -ms-flex-direction: column;
-          flex-direction: column; } }
-  .members-list .members-grid {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -ms-flex-pack: distribute;
-        justify-content: space-around; }
-    @media (min-width: 768px) {
-      .members-list .members-grid {
-        -ms-flex-direction: row;
-            flex-direction: row; } }
-    .members-list .members-grid .members-block {
-      -ms-flex: 33%;
-          flex: 33%;
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-align: center;
-          align-items: center;
-      -ms-flex-direction: column;
-          flex-direction: column; }
-      @media (min-width: 768px) {
-        .members-list .members-grid .members-block {
-          max-width: 990px;
-          -ms-flex: 1;
-              flex: 1; } }
-    .members-list .members-grid .flip-container {
-      display: block;
-      box-shadow: inset 1px 1px 40px 0 rgba(0, 0, 0, 0.45);
-      background: #aff1d3;
-      border-radius: 50%; }
-      .members-list .members-grid .flip-container .flipper {
-        -ms-flex: 1 0 auto;
-            flex: 1 0 auto;
-        display: -ms-flexbox;
-        display: flex;
-        width: 50%;
-        position: relative;
-        -webkit-transition: 1.9s;
-        -webkit-transform-style: preserve-3d;
-        -moz-transition: 1.9s;
-        -moz-transform-style: preserve-3d;
-        transition: 1.9s;
-        transform-style: preserve-3d; }
-        .members-list .members-grid .flip-container .flipper .members_det {
-          display: block; }
-        .members-list .members-grid .flip-container .flipper p {
-          font-size: 1rem;
-          font-style: italic;
-          line-height: 1.5rem; }
-      .members-list .members-grid .flip-container .front {
-        position: absolute;
-        background-size: cover;
-        border-radius: 50%;
-        -ms-flex: 2;
-            flex: 2; }
-        .members-list .members-grid .flip-container .front img {
-          border-radius: 50%; }
-      .members-list .members-grid .flip-container .back {
-        border-radius: 50%;
-        position: absolute;
-        width: 125px;
-        text-overflow: ellipsis;
-        height: 125px;
-        text-align: center;
-        right: 3px;
-        transform: rotateY(180deg); }
-        @media (min-width: 768px) {
-          .members-list .members-grid .flip-container .back {
-            width: 200px;
-            height: 200px;
-            right: 4px;
-            top: 55px; } }
-    .members-list .members-grid .flip-container.hover .flipper,
-    .members-list .members-grid .flip-container:hover .flipper {
-      transform: rotateY(180deg); }
-    .members-list .members-grid .back,
-    .members-list .members-grid .flip-container,
-    .members-list .members-grid .front {
-      width: 125px;
-      height: 125px; }
-      @media screen and (min-width: 650px) {
-        .members-list .members-grid .back,
-        .members-list .members-grid .flip-container,
-        .members-list .members-grid .front {
-          width: 190px;
-          height: 190px; } }
-      @media (min-width: 768px) {
-        .members-list .members-grid .back,
-        .members-list .members-grid .flip-container,
-        .members-list .members-grid .front {
-          width: 200px;
-          height: 200px; } }
-    .members-list .members-grid .back,
-    .members-list .members-grid .front {
-      -webkit-backface-visibility: hidden;
-      backface-visibility: hidden; }
-    .members-list .members-grid .members_det {
-      text-align: center; }
-
-.members_at_large {
-  padding-bottom: 3.4375rem;
-  border-bottom: solid 3px #4FC8A1;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-direction: column;
-      flex-direction: column;
-  -ms-flex-pack: center;
-      justify-content: center; }
-  .members_at_large .members_at_large-grid {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -ms-flex-pack: center;
-        justify-content: center; }
-    @media (min-width: 768px) {
-      .members_at_large .members_at_large-grid {
-        -ms-flex-wrap: nowrap;
-            flex-wrap: nowrap; } }
-    .members_at_large .members_at_large-grid .members_at_large-name {
-      font-size: 1.375rem;
-      -ms-flex-pack: center;
-          justify-content: center;
-      display: -ms-flexbox;
-      display: flex;
-      padding: 0.2rem;
-      text-align: center;
-      margin: 1rem; }
-
-.meeting-minutes {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-direction: column;
-      flex-direction: column;
-  padding-bottom: 3.4375rem;
-  border-bottom: solid 3px #4FC8A1; }
-  .meeting-minutes .news-img img {
-    width: 100%; }
-  .meeting-minutes .red-more {
-    -ms-flex-item-align: end;
-        align-self: flex-end; }
-
-.newsLetter {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-direction: column;
-      flex-direction: column; }
-
-.archive-sec {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: justify;
-      justify-content: space-between; }
-  .archive-sec .arch-btn {
-    -ms-flex-order: 1;
-        order: 1;
-    -ms-flex-item-align: start;
-        align-self: flex-start; }
-    .archive-sec .arch-btn .green-btn {
-      font-size: 1.25rem; }
-  .archive-sec .arch-block {
-    width: 55%;
-    border-top: solid 3px #4FC8A1; }
-
-
-.site-main {
-  width: 100%;
-  display: -ms-flexbox;
-  display: flex;
-  margin: 0 auto;
-  height: auto; }
-
-.main-involved-wrapper {
-  padding-top: 50px; }
-
-.involved-title a {
-  width: 200px;
-  height: 120px;
-  margin-top: 50px;
-  background-color: #4FC8A1;
-  margin-left: 25px;
-  margin-bottom: 25px;
-  font-family: Asap;
-  font-size: 24px;
-  line-height: 27px;
-  color: #000;
-  text-align: center;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around; }
-
-.involved-title a:hover {
-  color: #248e6a; }
-
-.border-radius {
-  border-left: solid 12px #D93B57;
-  border-color: red; }
-
-.gre-button {
-  width: 261px;
-  height: 47px;
-  background-color: #4FC8A1;
-  border-radius: 6px;
-  text-decoration: none;
-  font-size: 15px;
-  font-family: Asap;
-  font-family: "Noto Sans";
-  font-weight: bold;
-  text-align: center;
-  line-height: 30px;
-  display: block; }
-  .gre-button a {
-    color: #fff; }
-
-.text-shadow {
-  border-top: 10px solid #248e6a;
-  width: 100%;
-  margin-bottom: 10px; }
-
-.support-containar {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: center;
-      justify-content: center; }
-
-.support-img {
-  width: 150px 60px;
-  height: 160.50px;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center; }
-
-img {
-  height: 100%; }
-
-.involved .circle-btn {
-  width: 200px;
-  height: 178px;
-  display: -ms-flexbox;
-  display: flex;
-  height: 200px;
-  border-radius: 150%;
-  background-color: #4fc8a1;
-  margin: 130px;
-  text-align: center;
-  color: #fff;
-  padding-top: 50px;
-  font-weight: 300;
-  font-family: Asap;
-  font-size: 18px;
-  text-align: center;
-  line-height: 27px; }
-
-.re-btn {
-  width: 175.38px;
-  height: 47px;
-  border-radius: 6px;
-  background-color: #f76072;
-  color: #fff;
-  margin-left: 60px;
-  padding: 10px;
-  box-shadow: none;
-  font-family: "Noto Sans";
-  font-weight: 300;
-  text-shadow: none;
-  letter-spacing: 0.8px;
-  text-decoration: none;
-  font-family: "Noto Sans";
-  font-size: 15px;
-  font-weight: bold;
-  text-align: center;
-  line-height: 27px; }
-
-.pink-btn {
-  width: 175.38px;
-  height: 47px;
-  background-color: #f76072;
-  border-radius: 6px;
-  font-family: "Noto Sans";
-  font-weight: bold;
-  text-align: center;
-  line-height: 30px;
-  color: #fff;
-  margin-left: 60px;
-  padding: 8px;
-  box-shadow: none;
-  text-shadow: none;
-  letter-spacing: 0.8px;
-  text-decoration: none;
-  float: left; }
-
-.contact-container .contact-person {
-  color: #fff;
-  background-color: #4fc8a1;
-  font-size: 10px;
-  -ms-flex-direction: row;
-      flex-direction: row;
-  text-align: center;
-  width: 50px; }
-
-.involved .green-btn {
-  padding: 20px 25px 19px 19px;
-  font-size: 25px;
-  height: 200px;
-  display: -ms-flexbox;
-  display: flex;
-  border-radius: 150%;
-  background-color: #4fc8a1;
-  display: block;
-  width: 200px;
-  text-align: center;
-  color: #fff;
-  text-align: center; }
-
-.involved .red-btn {
-  padding: 15px 40px;
-  background-color: #F76072;
-  border-radius: 6px;
-  color: #fff;
-  margin-left: 80px;
-  font-family: "Noto Sans";
-  font-size: 24px;
-  font-weight: 300;
-  text-shadow: none;
-  letter-spacing: 0.8px;
-  text-align: center;
-  display: inline;
-  line-height: inherit;
-  margin: 20px;
-  -ms-flex-direction: row;
-      flex-direction: row; }
-
-
-/*--------------------------------------------------------------
 # NW Program Page
 --------------------------------------------------------------*/
 * {
@@ -2276,10 +1900,7 @@ img {
   -ms-flex-align: center;
       align-items: center; }
 
-
-fonts
-h1,
-
+fonts h1,
 h2,
 h3 {
   font-family: "Asap", sans-serif;
@@ -2332,13 +1953,6 @@ p {
     margin-top: 3.4375rem;
     margin-bottom: 1.875rem; }
 
-    @media (min-width: 768px) {
-      .nw-program .nw-img {
-        float: right;
-        width: 900rem;
-        height: 300px; } }
-
-
 @media (min-width: 768px) {
   .nw-part1 {
     display: -ms-flexbox;
@@ -2368,51 +1982,54 @@ p {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-pack: center;
-
-        justify-content: center; }
+        justify-content: center;
+    margin-top: 2rem; }
     @media (min-width: 768px) {
       .funding .funding-img,
       .funding .money-spend-img {
-        width: 50%;
-        margin-bottom: 4rem; } }
+        margin-top: 0; } }
   @media (min-width: 768px) {
-    .funding .nw-part2 {
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-direction: row;
-          flex-direction: row; } }
+    .funding .money-spend-img img {
+      padding-right: 4rem;
+      padding-left: 0.4rem; } }
+  .funding h2 {
+    text-align: center; }
+  .funding .nw-part2 {
+    margin: 0 auto; }
+    @media (min-width: 768px) {
+      .funding .nw-part2 {
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-direction: row;
+            flex-direction: row;
+        -ms-flex-align: center;
+            align-items: center; }
+        .funding .nw-part2 .red-border-container {
+          padding-right: 3.4%;
+          width: 82%;
+          display: -ms-flexbox;
+          display: flex; } }
+  .funding .nw-part3 p {
+    -ms-flex-negative: 22;
+        flex-shrink: 22; }
   @media (min-width: 768px) {
-
     .funding .nw-part3 {
       display: -ms-flexbox;
       display: flex;
       -ms-flex-align: center;
           align-items: center;
       -ms-flex-direction: row-reverse;
-
-          flex-direction: row-reverse; }
-    .funding .money-spend-para {
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex: 25%;
-          flex: 25%;
-      height: 50%;
-      -ms-flex-negative: 2;
-          flex-shrink: 2; }
-    .funding img {
-      height: 60%; } }
-  @media (min-width: 768px) {
-    .funding .red-border-container {
-      width: 60%;
-      height: 20rem; } }
-
+          flex-direction: row-reverse; } }
+  .funding .nw-part3 .money-spend-para {
+    -ms-flex-negative: 5;
+        flex-shrink: 5; }
   .funding .funding-btn {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-pack: center;
         justify-content: center;
     margin-top: 1.875rem; }
-    @media (min-width: 959px) {
+    @media (min-width: 768px) {
       .funding .funding-btn {
         -ms-flex-pack: end;
             justify-content: flex-end; } }
@@ -2420,7 +2037,7 @@ p {
       padding: 10px;
       width: 44.666%;
       margin-right: 2px; }
-      @media (min-width: 959px) {
+      @media (min-width: 768px) {
         .funding .funding-btn .green-btn {
           padding: 1.2rem;
           width: 18%; } }
@@ -2503,13 +2120,11 @@ p {
           flex-direction: column;
       -ms-flex-align: center;
           align-items: center; }
-
       @media (min-width: 768px) {
         .teacher-list .teacher-grid .teacher-block {
           max-width: 990px;
           -ms-flex: 1;
               flex: 1; } }
-
     .teacher-list .teacher-grid .flip-container {
       display: block;
       box-shadow: inset 1px 1px 40px 0 rgba(0, 0, 0, 0.45);
