change the theme screenshot

--- a/themes/montessori-theme/sass/_modules.scss
+++ b/themes/montessori-theme/sass/_modules.scss
@@ -29,6 +29,13 @@
 		/* Above WP toolbar. */
 	}
 }
+// .theme-overlay .screenshot img {
+//     height: auto;
+//     position: absolute;
+//     left: 8px !important;
+//     top: 66px!important;
+//     width: 95%;
+// }
 /*--------------------------------------------------------------
 # Alignments
 --------------------------------------------------------------*/
